Remove redundant files

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -1,5 +1,6 @@
-.tmp {
+.container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 90vh;
