--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -13,6 +13,7 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-warning: #e63946;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -26,5 +27,6 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary-warning: #e63946;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
