--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -14,6 +14,10 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-color-primary-warning: #e63946;
+  --ifm-color-primary-secondary: #4542dc;
+  --ifm-color-primary-black: #1f1e22;
+  --ifm-color-primary-white: #ffffff;
+
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -28,5 +32,8 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --ifm-color-primary-warning: #e63946;
+  --ifm-color-primary-secondary: #4542dc;
+  --ifm-color-primary-black: #ffffff;
+  --ifm-color-primary-white: #1f1e22;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
