--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -1,7 +1,95 @@
-.container {
+.home_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  height: calc(100vh - 60px);
+  width: 100%;
+}
+.home_titleBox {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  background-color: #4542dc;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 90vh;
+  flex-direction: column;
+  color: white;
+}
+.home_documentationBox {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  background-color: #1f1e22;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+}
+.home_githubBox {
+  grid-column: 2 /3;
+  grid-row: 2 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: white;
+  text-decoration: none;
+}
+.home_title {
+  font-size: 48px;
+  text-align: center;
+}
+.home_githubTitle {
+  font-size: 48px;
+  color: #1f1e22;
+}
+.home_subtitle {
+  font-weight: normal;
+  font-size: 24px;
+  margin: 30px 0;
+  text-align: center;
+}
+.home_text {
+  color: #4542dc;
+  font-size: 24px;
+  text-align: center;
+  margin: 0;
+}
+.home_textBox {
+  background-color: white;
+  padding: 10px;
+  margin: 0 10px;
+}
+
+@media (max-width: 1024px) {
+  .home_container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+  }
+  .home_titleBox {
+    grid-column: 1 / 2;
+    grid-row: 1 / 7;
+  }
+  .home_documentationBox {
+    grid-column: 1 / 2;
+    grid-row: 7 / 8;
+  }
+  .home_githubBox {
+    grid-column: 1 / 2;
+    grid-row: 8 / 9;
+  }
+
+  .home_title {
+    font-size: 34px;
+  }
+  .home_githubTitle {
+    font-size: 34px;
+  }
+  .home_text {
+    font-size: 18px;
+  }
+  .home_subtitle {
+    font-size: 18px;
+  }
 }
