--- a/docs/src/pages/index.css
+++ b/docs/src/pages/index.css
@@ -4,10 +4,14 @@
   align-items: center;
 }
 .home_abstract_title {
-  font-size: 48px;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: 'JetBrainsMono';
 }
 .home_abstract_text {
-  font-size: 24px;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'JetBrainsMono';
 }
 .home_abstract_squareBtn {
   cursor: pointer;
@@ -25,6 +29,7 @@
 .home_titleBox {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  padding: 10px;
   flex-direction: column;
   color: var(--ifm-color-white);
   background-color: var(--ifm-color-primary);
@@ -46,7 +51,6 @@
 }
 .home_subtitle {
   margin: 30px 0;
-  font-weight: normal;
 }
 .home_text {
   margin: 0;
@@ -54,7 +58,6 @@
 }
 .home_textBox {
   padding: 10px;
-  margin: 0 10px;
   background-color: var(--ifm-color-white);
 }
 
@@ -80,5 +83,14 @@
   }
   .home_abstract_text {
     font-size: 18px;
+  }
+}
+
+@media (max-width: 900px) {
+  .home_abstract_title {
+    font-size: 28px;
+  }
+  .home_abstract_text {
+    font-size: 16px;
   }
 }
